Изменён цвет индикатора загрузки

--- a/TheSimpsonsAPI/Storyboards/Base.lproj/Main.storyboard
+++ b/TheSimpsonsAPI/Storyboards/Base.lproj/Main.storyboard
@@ -24,6 +24,7 @@
                             </imageView>
                             <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="bZQ-eA-dkk">
                                 <rect key="frame" x="177.66666666666666" y="396" width="20" height="20"/>
+                                <color key="color" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </activityIndicatorView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nb9-Ds-f6B">
                                 <rect key="frame" x="20" y="684" width="335" height="54"/>
